# Engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  config.h.in  imgui.ini
Arkanoid/: CMakeLists.txt
Arkanoid/scripts/: BallController.cpp  BallController.h  PlatformController.cpp  PlatformController.h  PlayerController.cpp  PlayerController.h
Arkanoid/src/: Action.h  ArkanoidApp.cpp  ArkanoidLayer.cpp  ArkanoidLayer.h
Engine/: CMakeLists.txt
Engine-Editor/: CMakeLists.txt
Engine-Editor/src/: Engine_EditorApp.cpp  Engine_EditorLayer.cpp  Engine_EditorLayer.h
Engine/assets/shaders/: 2D_line_shader.glsl  2D_quad_shader.glsl
Engine/include/: Engine.h
Engine/src/: pch.h
Engine/src/Engine/: Application.cpp  Application.h  Core.h  EntryPoint.cpp  EntryPoint.h  Input.h  KeyCode.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.h  Loh.cpp  MouseButtonCode.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h
Engine/src/Engine/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCode.h  LayerStack.cpp  LayerStack.h  Log.cpp  MouseButtonCode.h  TimeStep.h  UUID.cpp  UUID.h  Window.h
Engine/src/Engine/Debug/: Instrumentor.h
Engine/src/Engine/Event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/src/Engine/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Engine/src/Engine/Math/: Math.cpp  Math.h
Engine/src/Engine/Renderer/: Batch.h  Batch2D.h  Batch2D_impl.h  Batch_impl.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  EditorCamera.cpp  EditorCamera.h  FrameBuffer.cpp  FrameBuffer.h  GraphicContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  RendererCommand.cpp  RendererCommand.h  Shader.cpp  Shader.h  SubTexture2D.cpp  SubTexture2D.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Engine/src/Engine/Scene/: Components.h  EditorCamera.cpp  EditorCamera.h  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
Engine/src/Engine/Script/: ScriptEngine.cpp  ScriptEngine.h
Engine/src/Engine/Systems/: ParticlesSystem.cpp  ParticlesSystem.h  Random.cpp  Random.h
Engine/src/Engine/Utils/: FileDialogs.h
Engine/src/Platform/Linux/: LinuxPlatformUtils.cpp
Engine/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture2D.cpp  OpenGLTexture2D.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Engine/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
EngineEditor/: CMakeLists.txt
EngineEditor/assets/scenes/: circle_test  circle_test.engine  example.engine  linux_scene.engine  paly_state.engine  physics_simulation.engine
EngineEditor/src/: EngineEditorApp.cpp  EngineEditorLayer.cpp  EngineEditorLayer.h
EngineEditor/src/Panel/: ContentPanel.cpp  ContentPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Sandbox/: CMakeLists.txt
Sandbox/assets/shaders/: default_2D_circle_shader.glsl  default_2D_line_shader.glsl  default_2D_shader.glsl  texture2D_shader.glsl  uniform_color_shader.glsl  vertex_color_shader.glsl
Sandbox/src/: ParticlesSystem.cpp  ParticlesSystem.h  Random.cpp  Random.h  Sandbox.cpp  Sandbox2D.cpp  Sandbox2D.h
Sandbox/src/FirstGame/: Quad.cpp  Quad.h  RendererSys.cpp  RendererSys.h  Transform.h
Sandbox/src/Layers/: Sandbox2D.cpp  Sandbox2D.h
ScriptingSandbox/: CSharpTesting.cs  ScriptingSandbox.csproj  ScriptingSandbox.sln
ScriptingSandbox/source/: CSharpTest.cs
